--- a/package.json
+++ b/package.json
@@ -6,14 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dbpush": "dotenv -e .env.local -- npx prisma db push --schema=./prisma/postgres.prisma",
+    "prisma": "dotenv -e .env.local -- npx prisma generate --schema=./prisma/postgres.prisma"
   },
   "dependencies": {
     "@next/font": "13.1.4",
+    "@prisma/client": "^4.9.0",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "ip-anonymize": "^0.1.0",
     "next": "13.1.4",
+    "next-api-decorators": "^2.0.1",
+    "nextjs-cors": "^2.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "remove": "^0.1.5"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/crypto-js": "^4.1.1",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
+    "dotenv-cli": "^7.0.0",
+    "prisma": "^4.9.0",
+    "typescript": "4.9.4"
   }
 }
