--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "dependencies": {
     "@next/font": "13.1.4",
     "@prisma/client": "^4.9.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "http-status-codes": "^2.2.0",
     "ip-anonymize": "^0.1.0",
     "next": "13.1.4",
-    "next-api-decorators": "^2.0.1",
     "nextjs-cors": "^2.1.2",
+    "path-to-regexp": "^6.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remove": "^0.1.5"
