--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ip-anonymize": "^0.1.0",
     "next": "13.1.4",
     "nextjs-cors": "^2.1.2",
+    "npm-run-all": "^4.1.5",
     "path-to-regexp": "^6.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
