--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "prisma": "prisma generate"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.4",
     "@prisma/client": "^4.9.0",
     "chalk": "^5.2.0",
@@ -24,6 +28,7 @@
     "crypto-js": "^4.1.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "framer-motion": "^8.5.5",
     "http-status-codes": "^2.2.0",
     "ip-anonymize": "^0.1.0",
     "next": "13.1.4",
